# InFMon

./: .clang-format  .cppcheck-suppressions  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README.md  commitlint.config.js  rustfmt.toml
.github/workflows/: build.yml  cpp-test.yml  cross-build.yml  dco.yml  lint.yml  package-deb.yml  rust-test.yml
ci/: README.md  apt-packages.txt  branch-protection.sh  check-dco.sh  mirror-image.sh  run-clippy.sh  run-rustfmt.sh
cli/: README.md
debian/: changelog  control  infmon-backend.conffiles  infmon-backend.install  infmon-backend.postinst  infmon-cli.bash-completion  infmon-cli.install  infmon-cli.manpages  infmon-frontend.install  infmon-frontend.postinst  infmon-frontend.postrm  infmon-frontend.service  rules
debian/configs/: backend.conf  frontend.conf
deploy/: infmon.service
docs/: dev-environment.md
examples/dpdk-helloworld/: .gitignore  Makefile  README.md  main.c
frontend/: README.md
packaging/debian/: README.Debian  control  copyright  infmon-backend.install  infmon-backend.maintscript  infmon-backend.postinst  infmon-backend.postrm  infmon-cli.bash-completion  infmon-cli.manpages  infmon-frontend.conffiles  infmon-frontend.dirs  infmon-frontend.install  infmon-frontend.logrotate  infmon-frontend.postinst  infmon-frontend.postrm  infmon-frontend.prerm  infmon-frontend.service  rules
packaging/debian/configs/: config.yaml
packaging/tools/: sync-debian-changelog.py
packaging/tools/tests/: test_sync_debian_changelog.py
scripts/: gen_golden_pcaps.py
specs/: 000-overview.md  001-ci-and-precommit.md  002-flow-tracking-model.md  003-erspan-and-packet-parsing.md  004-backend-architecture.md  005-frontend-architecture.md  006-exporter-otlp.md  007-cli.md  008-packaging-install.md  009-logging.md  README.md  TEMPLATE.md
src/backend/: CMakeLists.txt
src/backend/api/: infmon.api
src/backend/cmake/: FindVppApiGen.cmake
src/backend/include/infmon/: api_handler.h  counter_table.h  erspan_parser.h  flow_rule.h  graph_node.h  log.h  snapshot.h  stats_segment.h
src/backend/src/: api_handler.c  counter_table.c  erspan_parser.c  flow_rule.c  graph_node.c  snapshot.c  stats_segment.c
src/backend/src/vpp/: infmon_api_handlers.c  infmon_log.c  infmon_nodes.c
src/backend/test/: fuzz_erspan_parser.cc  test_api_handler.cc  test_api_schema.cc  test_counter_table.cc  test_erspan_parser.cc  test_erspan_pcap.cc  test_flow_rule.cc  test_graph_node.cc  test_integration.cc  test_snapshot.cc  test_stats_segment.cc
src/cli/: Cargo.toml
src/cli/src/: exit_codes.rs  lib.rs  main.rs  output.rs
src/cli/tests/: cli_args.rs  completions_manpage.rs  exit_codes.rs  signal_handling.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/config/: crud.rs  crud_tests.rs  mod.rs  model.rs  parse.rs  parse_tests.rs  test_helpers.rs  validate.rs  validate_tests.rs
src/common/src/ipc/: control_client.rs  control_client_tests.rs  decode.rs  decode_tests.rs  error.rs  mod.rs  protocol.rs  stats_client.rs  stats_client_tests.rs  types.rs  types_tests.rs
src/frontend/: Cargo.toml  build.rs
src/frontend/src/: control.rs  exporter.rs  exporter_tests.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  logging.rs  logging_tests.rs  main.rs  otlp.rs  otlp_tests.rs  poller.rs  poller_tests.rs  vapi_control_client.rs  vapi_stats_client.rs
src/frontend/src/vapi_ffi/: infmon_vapi_client.c  mod.rs
src/infmon-backend/: README.md
src/infmon-config/: Cargo.toml
src/infmon-config/src/: crud.rs  lib.rs  model.rs  parse.rs  validate.rs
src/infmon-frontend/: Cargo.toml
src/infmon-frontend/src/: poller.rs
src/infmon-ipc/: Cargo.toml
src/infmon-ipc/src/: control_client.rs  decode.rs  error.rs  lib.rs  stats_client.rs  types.rs
tests/: README.md
tests/e2e/: conftest.py  gen_golden_pcaps.py  helpers.py  replay_traffic.py  requirements.txt  test_packet_replay.py
tests/e2e/scenarios/erspan3_bad_version/: expected_flows.json
tests/e2e/scenarios/erspan3_full/: expected_flows.json  input.pcap
tests/e2e/scenarios/erspan3_gre_keyed/: expected_flows.json
tests/e2e/scenarios/erspan3_ipv6_full/: expected_flows.json  input.pcap
tests/e2e/scenarios/erspan3_ipv6_trunc128/: expected_flows.json  input.pcap
tests/e2e/scenarios/erspan3_o_bit/: expected_flows.json
tests/e2e/scenarios/erspan3_o_bit_truncated/: expected_flows.json  input.pcap
tests/e2e/scenarios/erspan3_qinq/: expected_flows.json  input.pcap
tests/e2e/scenarios/erspan3_trunc128/: expected_flows.json
tests/e2e/scenarios/erspan3_trunc_outer/: expected_flows.json
tests/e2e/scenarios/erspan3_with_seq/: expected_flows.json  input.pcap
tests/pcaps/erspan/: erspan3_bad_version.pcap  erspan3_full.pcap  erspan3_gre_keyed.pcap  erspan3_ipv6_full.pcap  erspan3_o_bit.pcap  erspan3_trunc128.pcap  erspan3_trunc_outer.pcap  erspan3_with_seq.pcap
tests/scripts/: gen_golden_pcaps.py
tools/: sync-debian-changelog.py
tools/tests/: test_sync_debian_changelog.py
