[package]
name = "infmon-cli"
version = "0.1.0"
edition = "2021"
description = "infmonctl — operator CLI for InFMon"
license = "Apache-2.0"

[[bin]]
name = "infmonctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
infmon-common = { path = "../common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
libc = "0.2"
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
