[package]
name = "infmon-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Shared configuration and IPC library for InFMon"

[features]
default = ["control"]
# config is always available since it's co-located in this crate;
# only IPC (which needs tokio) is gated behind the "control" feature.
control = ["dep:tokio"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "sync", "io-util", "time"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["net", "rt", "sync", "macros"] }
