[package]
name = "infmon-frontend"
version = "0.1.0"
edition = "2021"
description = "InFMon frontend — poller and exporter dispatch daemon"
license = "Apache-2.0"


[[bin]]
name = "infmon-frontend"
path = "src/main.rs"

[build-dependencies]
cc = "1"

[dependencies]
hostname = "0.4"
infmon-common = { path = "../common" }
inventory = "0.3"
libc = "0.2"
serde_json = "1"
syslog-tracing = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# NOTE: opentelemetry-proto 0.27 with gen-tonic-messages requires tonic 0.12.
# Upgrading either crate independently may cause compile errors — always upgrade together.
opentelemetry-proto = { version = "0.27", features = ["gen-tonic-messages", "metrics"] }
serde_yaml = "0.9"
signal-hook = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["rt", "time", "sync"] }
tonic = "0.12"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
