[package]
name = "infmon-config"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "InFMon flow-rule YAML configuration parsing and validation"

[dependencies]
infmon-common = { path = "../common", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
