[package]
name = "infmon-frontend"
version = "0.1.0"
edition = "2021"
description = "InFMon frontend — poller and exporter dispatch daemon"
license = "Apache-2.0"

[dependencies]
infmon-ipc = { path = "../infmon-ipc", default-features = false }
libc = "0.2"
log = "0.4"

[dev-dependencies]
tempfile = "3"
