[package]
name = "infmon-ipc"
version = "0.1.0"
edition = "2021"
description = "IPC clients for InFMon — stats segment reader and control API"
license = "Apache-2.0"

[dependencies]
infmon-config = { path = "../infmon-config" }
libc = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["net", "rt", "sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["net", "rt", "sync", "macros"] }
